modified form ui

--- a/app/globals.css
+++ b/app/globals.css
@@ -436,4 +436,9 @@
   .sidebar-label {
     @apply text-16 font-semibold text-black-2 max-xl:hidden;
   }
+
+  .align-items-center {
+    display: flex;
+    align-items: center;
+  }
 }
